# insurance-intake-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: app_config.yaml  settings.py
src/agent/: __init__.py  constants.py  duplicate_detector.py  extractor.py  orchestrator.py
src/agent/core/: __init__.py  duplicate_detector.py  extractor.py
src/api/: main.py
src/core/: config.py  exceptions.py
src/database/: mongodb.py  redis.py
src/llm/: __init__.py  factory.py  provider.py  router.py
src/llm/providers/: __init__.py  base.py  huggingface.py  openai_compatible.py
src/models/: __init__.py  api.py  conversation.py  insurance.py  llm.py  registration.py  response_types.py
src/ui/: gradio_app.py
src/utils/: exceptions.py  llm_helpers.py  logging.py  registration.py
tests/e2e-tests/: test_duplicate_fixes.py  test_end_to_end.py  test_integration.py  test_real_api.py
