[tool.poetry]
name = "insurance-intake-agent"
version = "0.1.0"
description = "AI-powered conversational agent for car insurance registration"
authors = ["Reza Bozorgi"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
gradio = "^5.35.0"
langchain = "^0.3.26"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
motor = "^3.6.0"
redis = "^6.2.0"
faiss-cpu = "^1.9.0"
transformers = "^4.53.0"
sentence-transformers = "^3.3.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
rapidfuzz = "^3.10.0"
jellyfish = "^1.1.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.21.1"
ruff = "^0.12.1"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true